--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "autoprefixer": "10.4.15",
     "contentlayer": "^0.3.4",
-    "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.28",
@@ -22,8 +21,7 @@
     "rehype-pretty-code": "^0.10.0",
     "shiki": "^0.14.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.3.2",
@@ -41,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
@@ -48,6 +47,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "storybook": "^7.3.2"
+    "storybook": "^7.3.2",
+    "typescript": "5.2.2"
   }
 }
