--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-type-animation": "^3.1.0",
     "rehype-pretty-code": "^0.10.0",
     "shiki": "^0.14.3",
     "tailwind-merge": "^1.14.0",
